--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.16.5",
     "@mui/material-nextjs": "^5.16.4",
     "@reduxjs/toolkit": "^2.2.7",
+    "local-storage": "^2.0.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
