--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,14 @@
     "@mui/icons-material": "^5.16.5",
     "@mui/material-nextjs": "^5.16.4",
     "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.7",
     "local-storage": "^2.0.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-tooltip": "^5.28.0",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
