--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,9 @@
     "@mui/material-nextjs": "^5.16.4",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
+    "framer-motion": "^11.15.0",
     "local-storage": "^2.0.0",
+    "lucide-react": "^0.468.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
