--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,9 @@
     "@mui/icons-material": "^5.16.5",
     "@mui/material-nextjs": "^5.16.4",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tanstack/react-query": "^5.71.1",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^11.15.0",
@@ -28,6 +30,7 @@
     "oidc-client-ts": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "react-oidc-context": "^3.2.0",
     "react-redux": "^9.1.2",
     "react-tooltip": "^5.28.0",
