--- a/server/package.json
+++ b/server/package.json
@@ -21,17 +21,23 @@
   },
   "dependencies": {
     "@google-cloud/vertexai": "^1.6.0",
-    "@nestjs/common": "^10.0.0",
+    "@neondatabase/serverless": "^0.10.4",
+    "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^3.2.3",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/core": "^10.4.15",
+    "@nestjs/platform-express": "^10.4.15",
     "@nestjs/swagger": "^7.4.0",
+    "@types/aws-lambda": "^8.10.147",
+    "@vendia/serverless-express": "^4.12.6",
+    "aws-serverless-express": "^3.4.0",
     "axios": "^1.7.4",
+    "google-auth-library": "^9.15.1",
+    "pg": "^8.13.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
+    "@nestjs/cli": "^10.4.9",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
