--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^11.15.0",
+    "js-cookie": "^3.0.5",
     "local-storage": "^2.0.0",
     "lucide-react": "^0.468.0",
     "next": "14.2.5",
@@ -38,6 +39,7 @@
     "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
