--- a/server/package.json
+++ b/server/package.json
@@ -25,16 +25,20 @@
     "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.4.15",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^10.4.15",
     "@nestjs/swagger": "^7.4.0",
+    "@nestjs/typeorm": "^11.0.0",
     "@types/aws-lambda": "^8.10.147",
     "@vendia/serverless-express": "^4.12.6",
     "aws-serverless-express": "^3.4.0",
-    "axios": "^1.7.4",
+    "axios": "^1.8.4",
     "google-auth-library": "^9.15.1",
-    "pg": "^8.13.3",
+    "jwt-decode": "^4.0.0",
+    "pg": "^8.14.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.22"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.9",
