--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: prepare
-    environment: pre-prod     # <-- same environment here
+    environment: Pre-Prod     # <-- same environment here
     steps:
       - name: SSH into server and deploy
         run: |
