--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,22 +1,17 @@
 name: Deploy on Main Push/PR
-
 on:
   push:
     branches: [main]
   pull_request:
     branches: [main]
 jobs:
-  checkout:
+  deploy:
     runs-on: ubuntu-latest
+    environment: Pre-Prod     # Environment containing your secrets and variables
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
-
-  prepare:
-    runs-on: ubuntu-latest
-    needs: checkout
-    environment: Pre-Prod     # <-- must exactly match your Environment name
-    steps:
+        
       - name: Setup SSH
         run: |
           mkdir -p ~/.ssh
@@ -25,15 +20,10 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           # add the server to known_hosts
           ssh-keyscan "${{ secrets.SERVER_IP }}" >> ~/.ssh/known_hosts
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: prepare
-    environment: Pre-Prod     # <-- same environment here
-    steps:
+      
       - name: SSH into server and deploy
         run: |
-          ssh -i ~/.ssh/id_rsa deployer@68.183.87.239 << EOF
+          ssh -i ~/.ssh/id_rsa deployer@${{ secrets.SERVER_IP }} << EOF
             cd "${{ vars.BACKEND_PATH }}"
             git pull
             npm i 
