--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,16 @@
     "@headlessui/react": "^2.2.0",
     "@mui/icons-material": "^5.16.5",
     "@mui/material-nextjs": "^5.16.4",
+    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.71.1",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
     "js-cookie": "^3.0.5",
     "local-storage": "^2.0.0",
@@ -36,7 +40,8 @@
     "react-redux": "^9.1.2",
     "react-tooltip": "^5.28.0",
     "react-type-animation": "^3.2.0",
-    "tailwind-merge": "^3.0.2"
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
